--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <td>
                 <a href="https://david10dx.github.io/plantilla/"><img src="img/plantilla.png" width="50%"></a>
             </td>
-            <td><a href=""><img src="img/shop.png" width="50%"></td></a>
+            <td><img src="img/shop.png" width="50%"></td>
         </tr>
     </table>
     <table align="center" cellspacing="0px" width="100%" background="img/fondito2.jpg">
