--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
             <td>
                 <a href="https://david10dx.github.io/plantilla/"><img src="img/plantilla.png" width="50%"></a>
             </td>
-            <td><img src="img/shop.png" width="50%"></td>
+            <td>
+                <a href="https://david10dx.github.io/shop/"><img src="img/shop.png" width="50%"></a>
+            </td>
         </tr>
     </table>
     <table align="center" cellspacing="0px" width="100%" background="img/fondito2.jpg">
